# smart-sql-architect

./: .gitignore  README.md  pyproject.toml
src/sql_architect/: __init__.py  core.py  main.py  presets.py  schemas.py
tests/: test_core.py
