[project]
name = "smart-sql-architect"
version = "0.1.0"
description = "Natural language to SQL query generator powered by Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "google-generativeai>=0.7.2",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "diskcache>=5.6.3",
    "sqlparse>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_architect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
